# QuartzEngine2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Source/Core/: CMakeLists.txt  Core.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/Include/: Debug.h  Engine.h  EngineAPI.h  Quartz.h  System.h
Source/Engine/Include/Config/: Config.h
Source/Engine/Include/Entity/: EntityDatabase.h  EntityGraph.h  EntityView.h  World.h
Source/Engine/Include/Filesystem/: File.h  Filesystem.h  FilesystemHandler.h  Folder.h
Source/Engine/Include/Graphics/: ApiInfo.h  Graphics.h  ImageCache.h  PipelineCache.h  Renderer.h  ShaderCache.h
Source/Engine/Include/Graphics/Component/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TerrainComponent.h  TransformComponent.h
Source/Engine/Include/Graphics/FrameGraph/: FrameGraph.h  FrameGraphPass.h  FrameGraphResources.h
Source/Engine/Include/Graphics/Primitives/: GraphicsImage.h  GraphicsObject.h  GraphicsShader.h
Source/Engine/Include/Graphics/Renderers/: WorldRenderer.h
Source/Engine/Include/Input/: Input.h  InputAction.h  InputDevice.h  InputDeviceRegistry.h
Source/Engine/Include/Module/: LibraryLoader.h  Module.h  ModuleRegistry.h
Source/Engine/Include/Resource/: Asset.h  AssetHandler.h  AssetLoader.h  AssetManager.h  Common.h
Source/Engine/Include/Resource/Assets/: Image.h  Light.h  Material.h  Model.h  MtlMaterial.h  ObjModel.h  Shader.h  VertexData.h  VertexStream.h
Source/Engine/Include/Resource/Binary/: QCommon.h  QMaterial.h  QModel.h  QModelParser.h  QShader.h  QShaderParser.h
Source/Engine/Include/Resource/Loaders/: ConfigHandler.h  ConfigLoader.h  ImageHandler.h  MaterialHandler.h  ModelHandler.h  ShaderHandler.h
Source/Engine/Include/Resource/QMF/: QMF.h  QMFParser.h
Source/Engine/Include/Runtime/: Runtime.h  Timer.h
Source/Engine/Include/System/: DynamicLibrary.h  LibraryLoader.h  System.h
Source/Engine/Source/: Banner.h  Engine.cpp  Engine.h  Quartz.cpp
Source/Engine/Source/Config/: Config.cpp
Source/Engine/Source/Entity/: Component.h  Entity.h  EntityDatabase.cpp  EntityDatabase.h  EntityGraph.cpp  EntityView.h  World.cpp  World.h
Source/Engine/Source/Entity/Component/: Transform.cpp  Transform.h
Source/Engine/Source/Filesystem/: File.cpp  Filesystem.cpp  Folder.cpp
Source/Engine/Source/Graphics/: Graphics.cpp  ImageCache.cpp
Source/Engine/Source/Graphics/Component/: CameraComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  TerrainComponent.cpp  TransformComponent.cpp
Source/Engine/Source/Graphics/FrameGraph/: FrameGraph.cpp  FrameGraphPass.cpp
Source/Engine/Source/Graphics/Renderers/: WorldRenderer.cpp
Source/Engine/Source/Input/: Input.cpp  InputDevice.cpp  InputDeviceRegistry.cpp
Source/Engine/Source/Module/: DynamicLibrary.cpp  Module.cpp  ModuleRegistry.cpp
Source/Engine/Source/Module/Linux/: LinuxDynamicLibrary.cpp
Source/Engine/Source/Module/Windows/: WinApiDynamicLibrary.cpp  WinApiDynamicLibrary.h  WinApiLibraryLoader.cpp
Source/Engine/Source/Resource/Binary/: QModelParser.cpp  QShaderParser.cpp
Source/Engine/Source/Resource/Loaders/: ConfigHandler.cpp  ConfigLoader.cpp  ImageHandler.cpp  MaterialHandler.cpp  ModelHandler.cpp  MtlHelper.h  ObjHelper.h  ShaderHandler.cpp
Source/Engine/Source/Resource/QMF/: QMFParser.cpp
Source/Engine/Source/Runtime/: Runtime.cpp  Timer.cpp
Source/Engine/Source/System/: DynamicLibrary.cpp  System.cpp  SystemAdmin.cpp  SystemAdmin.h
Source/Engine/Source/System/Linux/: LinuxDynamicLibrary.cpp  LinuxDynamicLibrary.h  LinuxLibraryLoader.cpp
Source/Engine/Source/System/Windows/: WinApiDynamicLibrary.cpp  WinApiDynamicLibrary.h  WinApiLibraryLoader.cpp
Source/Engine/Source/Windows/: WinApi.cpp  WinApi.h  WinApiDynamicLibrary.cpp  WinApiDynamicLibrary.h  WinApiLibraryLoader.cpp
Source/Modules/Graphics/: CMakeLists.txt
Source/Modules/Graphics/Include/: GfxDLL.h  Graphics.h  ImGuiRenderer.h  ModelData.h  SceneRenderer.h  SkyRenderer.h  TerrainRenderer.h  VulkanRenderer.h
Source/Modules/Graphics/Include/Component/: CameraComponent.h  LightComponent.h  MaterialComponent.h  MeshComponent.h  TransformComponent.h
Source/Modules/Graphics/Include/OpenGL/: GLGraphics.h
Source/Modules/Graphics/Include/Vulkan/: VulkanBuffer.h  VulkanBufferCache.h  VulkanBufferWriter.h  VulkanCommandRecorder.h  VulkanDescriptorAllocator.h  VulkanDescriptorSetLayout.h  VulkanFrameGraph.h  VulkanFramebuffer.h  VulkanGraphics.h  VulkanImage.h  VulkanMaterial.h  VulkanMultiBuffer.h  VulkanPipeline.h  VulkanPipelineCache.h  VulkanPipelineManager.h  VulkanRenderScene.h  VulkanRenderable.h  VulkanRenderer.h  VulkanRenderpass.h  VulkanResourceManager.h  VulkanShader.h  VulkanShaderCache.h  VulkanState.h  VulkanSurface.h  VulkanSwapchain.h  VulkanSwapchainTimer.h
Source/Modules/Graphics/Source/: Graphics.cpp  GraphicsModule.cpp  ImGuiRenderer.cpp  SceneRenderer.cpp  SkyRenderer.cpp  TerrainRenderer.cpp  VulcanRenderer.cpp  VulkanRenderer.cpp
Source/Modules/Graphics/Source/Component/: CameraComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  RenderableComponent.cpp  TransformComponent.cpp
Source/Modules/Graphics/Source/OpenGL/: GLGraphics.cpp
Source/Modules/Graphics/Source/Vulkan/: VulkanBuffer.cpp  VulkanBufferCache.cpp  VulkanBufferWriter.cpp  VulkanCommandRecorder.cpp  VulkanFrameGraph.cpp  VulkanGraphics.cpp  VulkanImage.cpp  VulkanMultiBuffer.cpp  VulkanPipelineCache.cpp  VulkanPipelineManager.cpp  VulkanRenderScene.cpp  VulkanRenderer.cpp  VulkanShaderCache.cpp  (+5 more)
Source/Modules/Platform/: CMakeLists.txt
Source/Modules/Platform/Include/: Platform.h  PlatformAPI.h
Source/Modules/Platform/Source/: Platform.cpp  Platform.h  PlatformModule.cpp
Source/Modules/Sandbox/: CMakeLists.txt
Source/Modules/Sandbox/Include/: Colliders.h  Collision.h  CollisionDetection.h  GJK.h  Physics.h  PhysicsTypes.h  RigidBody.h  Shapes.h  Simplex.h
Source/Modules/Sandbox/Source/: Collision.cpp  Collisions.cpp  FurthestPoint.cpp  GJK.cpp  Inertia.cpp  Physics.cpp  SandboxModule.cpp  Simplex.cpp
(+78 files in other folders)
